# sample_apps

./: README.md
global_variables/: CMakeLists.txt  README.md
global_variables/inc/: CFile1.hpp  CFile2.hpp
global_variables/src/: CFile1.cpp  CFile2.cpp
lambda/: CMakeLists.txt  main.cpp
src/: main.cpp
